--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.0",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.6",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
